--- a/src/components/elements/Wrapper/Wrapper.css
+++ b/src/components/elements/Wrapper/Wrapper.css
@@ -1,15 +1,36 @@
+* {
+  box-sizing: border-box;
+}
+
 circle {
   transition: stroke-dashoffset 0.35s;
   transform: rotate(-90deg);
   transform-origin: 50% 50%;
   color: red;
-  position: absolute;
   display: flex;
-  left: 3px;
-}
+  
+  }
 
 svg {
+  display: flex;
+
+}
+
+.circle {
+  margin-top: 1%;
+  margin-left: 2px;
   position: absolute;
   display: flex;
-  left:0.2px;
+  flex-direction: column;
+}
+
+.rating {
+  position: absolute;
+  height: 29px;
+  top: 20px;
+  left: 30%;
+  margin-left: 5%;
+  margin-right: 5%;
+  width: 20px;
+  color: aliceblue;
 }
