--- a/src/components/elements/HeroImg/HeroImg.css
+++ b/src/components/elements/HeroImg/HeroImg.css
@@ -23,14 +23,14 @@
 }
 
 .heroimage-text {
-  z-index: 100;
   max-width: 700px;
+  font-family: 'Roboto';
   position: absolute;
   bottom: 40px;
   margin-right: 20px;
   min-height: 100px;
   background: rgba(0, 0, 0, 0.6);
-  color: #fff;
+  color: #FFFFFF;
   border-radius: 15px;
   padding: 10px 20px;
 
