--- a/src/components/elements/MovieInfo/MovieInfo.css
+++ b/src/components/elements/MovieInfo/MovieInfo.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  
   justify-content: space-evenly;
   align-items: flex-start;
   animation: animateMovieinfo 0.3;
@@ -36,7 +37,7 @@
 .movieinfo-content {
   max-width: 1280px;
   
-  margin: 0 auto;
+  margin: 30px;
   background: rgb(10,16,20);
   position: relative;
   box-sizing: border-box;
@@ -64,9 +65,9 @@
   display: flex;
 align-items:flex-start ;
 flex-direction: column;
-margin-left: 5px; 
 font-family: 'Roboto', sans-serif;
  color: white;
+ margin-left: 45px;
 }
 
 
