--- a/src/components/elements/Thumbnail/Thumbnail.css
+++ b/src/components/elements/Thumbnail/Thumbnail.css
@@ -4,7 +4,8 @@ width: 100%;  height: 100%;
   max-height: 100%;
   transition: all 0.3s;
   box-sizing: border-box;
-  border-radius: 0.3em;
+  border-radius: 0.25rem;
+  margin-right: 90px;
   border: none;
   background-color: transparent;
   display: flex;
